--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Tech It Easy Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="main.js"></script>
+    <script defer src="opdracht-1.js"></script>
 </head>
 <body>
 
