Opdracht 2 helemaal af

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <link rel="stylesheet" href="styles.css">
     <script defer src="main.js"></script>
     <script defer src="opdracht-1.js"></script>
+    <script defer src="opdracht-2.js"></script>
+
 </head>
 <body>
+<p>Verkocht aantal tv's: <span id="soldtvsnow"></span></p>
+<p>Ingekocht aantal tv's: <span id="purchasedtvsnow"></span></p>
+<p>Nog te verkopen aantal tv's: <span id="tosellnow"></span></p>
+
 
 </body>
 </html>
